Fix: Add min-height to video section to correct content overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -497,8 +497,7 @@ footer {
 }
 
 #video-content {
-  max-width: 560px;
-  max-height: 350px;
+  max-width: 900px;
   margin: 0 auto;
   text-align: center;
 }
